upgrade to common.logging 3+

--- a/RB/MultiRinger/App.config
+++ b/RB/MultiRinger/App.config
@@ -52,10 +52,6 @@
 
 
     </accounts>
-    <!--<sipTransport 
-      type="udp" 
-      Port="5080" 
-      />-->
     <sipTransport type="udp" port="0" />
     <networkSettings natInSDP="true" forceLooseRoute="false">
       <!--<stun address="stun.stunprotocol.org"/>-->
@@ -65,10 +61,6 @@
         <add address="sip:proxy.sipthor.net"/>
       </proxies>-->
     </networkSettings>
-    <!--<media 
-      isVADEnabled="true" 
-      playbackDeviceId="9" 
-      captureDeviceId="6" />-->
     <media isVADEnabled="true" />
   </sipua>
 
@@ -130,7 +122,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
