--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -34,9 +34,7 @@
       type="udp" 
       Port="5080" 
       />-->
-    <sipTransport
-      type="udp"
-      port="0" />
+    <sipTransport type="udp" port="0" />
     <networkSettings natInSDP="true" forceLooseRoute="false">
       <!--<stun address="stun.stunprotocol.org"/>-->
       <turn enabled="false" server="" type="udp" userName="" password="" realm="" />
@@ -142,6 +140,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.5.1.0" newVersion="2.5.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Core" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
