--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -37,13 +37,13 @@
   <property name="path.separator" value="${string::trim(path::combine(' ', ' '))}" />
   
   <!-- ASSEMBLY VARIABLES -->
-  <property name="version.use_semanticversioning" value="true" overwrite="false" />
+  <property name="version.use_semanticversioning" value="false" overwrite="false" />
   <property name="version.major" value="0" overwrite="false" />
   <property name="version.minor" value="2" overwrite="false" />
-  <property name="version.patch" value="2" overwrite="true" />
-  <property name="version.build" value="2" overwrite="false" />
+  <!--<property name="version.build" value="2" overwrite="false" />
   <property name="version.revision" value="1" overwrite="true" />
   
+  <property name="version.patch" value="${version.revision}" overwrite="true" />-->
   
   
   
