--- a/Tests/Integration/pjsip4net.Console/App.config
+++ b/Tests/Integration/pjsip4net.Console/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="sipua" type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net, Culture=neutral, PublicKeyToken=null"/>
+    <section name="sipua" type="pjsip4net.Configuration.SipUserAgentSettingsSection, pjsip4net, Culture=neutral, PublicKeyToken=null" />
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821" />
   </configSections>
   <sipua srtp="Disabled" secureSignaling="0" logMessages="true" logLevel="5" traceAndDebug="false" autoAnswer="true" autoRecording="true" autoConference="false" maxCalls="5">
     <accounts>
@@ -13,16 +13,16 @@
           userName="1000" password="1234" realm="*" isDefault="true"
           publishPresence="false" />-->
     </accounts>
-    <sipTransport type="udp" Port="5080"/>
+    <sipTransport type="udp" Port="5080" />
     <networkSettings natInSDP="true" forceLooseRoute="false">
       <!--<stun address="stun.stunprotocol.org"/>-->
-      <turn enabled="false" server="" type="udp" userName="" password="" realm=""/>
-      <ice enabled="false" noRTCP="false"/>
+      <turn enabled="false" server="" type="udp" userName="" password="" realm="" />
+      <ice enabled="false" noRTCP="false" />
       <!--<proxies>
         <add address="sip:proxy.sipthor.net"/>
       </proxies>-->
     </networkSettings>
-    <media isVADEnabled="true" playbackDeviceId="9" captureDeviceId="6"/>
+    <media isVADEnabled="true" playbackDeviceId="9" captureDeviceId="6" />
   </sipua>
   <common>
     <logging>
@@ -34,37 +34,49 @@
   <log4net>
     <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
       <mapping>
-        <level value="ERROR"/>
-        <foreColor value="White"/>
-        <backColor value="Red, HighIntensity"/>
+        <level value="ERROR" />
+        <foreColor value="White" />
+        <backColor value="Red, HighIntensity" />
       </mapping>
       <mapping>
-        <level value="INFO"/>
-        <backColor value="Green"/>
+        <level value="INFO" />
+        <backColor value="Green" />
       </mapping>
       <mapping>
-        <level value="WARN"/>
-        <backColor value="Yellow"/>
+        <level value="WARN" />
+        <backColor value="Yellow" />
       </mapping>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline"/>
+        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
       </layout>
     </appender>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="siptrace.txt"/>
-      <appendToFile value="true"/>
+      <file value="siptrace.txt" />
+      <appendToFile value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline"/>
+        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
       </layout>
     </appender>
 
     <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="ColoredConsoleAppender"/>
-      <appender-ref ref="FileAppender"/>
+      <level value="DEBUG" />
+      <appender-ref ref="ColoredConsoleAppender" />
+      <appender-ref ref="FileAppender" />
     </root>
   </log4net>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Core" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
