--- a/Tests/Integration/pjsip4net.Console/packages.config
+++ b/Tests/Integration/pjsip4net.Console/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="3.3.1" targetFramework="net40" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net40" />
   <package id="Common.Logging" version="3.1.0" targetFramework="net40" />
   <package id="Common.Logging.Core" version="3.1.0" targetFramework="net40" />
-  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net40" />
+  <package id="Common.Logging.Log4Net1210" version="3.1.0" targetFramework="net40" />
+  <package id="log4net" version="1.2.10" targetFramework="net40" />
+  <package id="Magnum" version="2.1.3" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net40" />
 </packages>
